added basic carousel, images and control with css

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 }
 
 #landingPageCarousel .carousel-inner, #landingPageCarousel .carousel-item {
-    height: 100vh; 
+    height: 100%; 
 }
 
 .carousel-item {
