--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,11 @@
+:root {
+    --opacity: 0.4;
+    --zcolor: rgb(64, 34, 230);
+}
+
 
 #landingPageCarousel {
-    height: 100vh;
+    height: 50vh;
     position: relative;
     z-index: 0;
 }
@@ -32,8 +37,8 @@
     width: 100%;
     height: 100%;
     z-index: 1;
-    background-color: green;
-    opacity: 0.3;
+    background-color: var(--zcolor);
+    opacity: var(--opacity);
 }
 
 #slide1 {
