end of class demo

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,11 @@
 :root {
-    --opacity: 0.4;
+    --opacity: 0.2;
     --zcolor: rgb(64, 34, 230);
 }
 
+body {
+    background-color: var(--zcolor);
+}
 
 #landingPageCarousel {
     height: 50vh;
@@ -59,4 +62,59 @@
 
 #slide5 {
     background-image: url('../img/moby_deploy1_8.jpg');
+}
+
+/* find the main tag, with a class col and a paragraph tag with class title */
+main .col >p.title {
+    color: #fff;
+    font-size: 6rem;
+     text-align: center;
+
+}
+
+.form_wrapper {
+    background-color: #fff;
+    border-radius: 2%;
+    padding: 20px 30px;
+    margin-bottom: 6rem;
+
+}
+
+button.btn {
+    background-color: #ccc;
+}
+
+.form_wrapper button.btn {
+    position: relative;             /* needed if using :hover  */
+    width: 100%;
+    height: 100%;
+    /* transform: rotate(270deg); */
+    /* transform: scaleX(1); */
+    /* transition: width 300ms; */
+    z-index: 1;
+}
+
+/* .form_wrapper button.btn:hover { */
+    /* transition: width 300ms; */
+    /* width: 50px; */
+/* } */
+
+.form_wrapper button.btn::after {
+    transform: scaleX(0);
+    position: absolute;
+    content: '';
+    transition: transform 300ms;
+}
+
+.form_wrapper button.btn:hover::after {
+    content: ' ';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background-color: red; */
+    z-index: -1;
+    transform: scaleX(1);
+
 }
